APS-4571 Add idempotency support for creates
